feat: vector store creation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,13 @@ services:
       - evolution-api
       - redis
     restart: always
+    volumes:
+      - ./vectorstore_data:/app/vectorstore
+      - ./rag_files:/app/rag_files
 
 volumes:
   evolution_instances:
   postgres_data:
   redis:
+  vectorstore_data:
+  rag_files:
